crates/rome_js_formatter/tests/specs/prettier/js/babel-plugins/record-tuple-tuple.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: record-tuple-tuple.js

---
# Input
```js
const tuple1 = #[1, 2, 3];

```

# Output
```js
const tuple1 = #
[1, 2, 3];

```

# Errors
```
error[SyntaxError]: expected an identifier but instead found '['
  ┌─ record-tuple-tuple.js:1:17
  │
1 │ const tuple1 = #[1, 2, 3];
  │                 ^ Expected an identifier here

error[SyntaxError]: Private names are only allowed on the left side of a 'in' expression
  ┌─ record-tuple-tuple.js:1:16
  │
1 │ const tuple1 = #[1, 2, 3];
  │                ^

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ record-tuple-tuple.js:1:17
  │
1 │ const tuple1 = #[1, 2, 3];
  │ ----------------^ An explicit or implicit semicolon is expected here...
  │ │                
  │ ...Which is required to end this statement


```


